Beispiele durch Verweise auf Buchseiten erweitert, Maxima-Routinen kommentiert

--- a/kap_2/beispiel_endl_flucht.html
+++ b/kap_2/beispiel_endl_flucht.html
@@ -26,6 +26,9 @@
     <p hidden="hidden">\(      \DeclareMathOperator{\abs}{abs}
       \newcommand{\ensuremath}[1]{\mbox{$#1$}}
 \)</p>
+    <!-- Text cell -->
+    <div class="comment">Differentialgleichung
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -55,6 +58,9 @@
     </table>
     <p>\[\operatorname{(dgl)	}\frac{d}{d t} x={{x}^{2}}\]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Allgemeine Lösung
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -81,6 +87,9 @@
     </table>
     <p>\[\operatorname{(lsg)	}-\frac{1}{x}=t+\ensuremath{\mathrm{\% c}}\]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Anpassung an Anfangsbedingung
+</div>
     <!-- Code cell -->
     <table>
       <tr>
