--- a/kap_2/beispiel_grad_hess.html
+++ b/kap_2/beispiel_grad_hess.html
@@ -26,6 +26,9 @@
     <p hidden="hidden">\(      \DeclareMathOperator{\abs}{abs}
       \newcommand{\ensuremath}[1]{\mbox{$#1$}}
 \)</p>
+    <!-- Text cell -->
+    <div class="comment">Skalarfeld
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -57,6 +60,9 @@
     </table>
     <p>\[\operatorname{(h)	}{{\ensuremath{\mathrm{x1}}}^{2}} {{\ensuremath{\mathrm{x2}}}^{3}}+1\]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Gradient
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -85,6 +91,9 @@
     </table>
     <p>\[\operatorname{	}\begin{pmatrix}2 \ensuremath{\mathrm{x1}} {{\ensuremath{\mathrm{x2}}}^{3}} &amp; 3 {{\ensuremath{\mathrm{x1}}}^{2}} {{\ensuremath{\mathrm{x2}}}^{2}}\end{pmatrix}\]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Hessematrix
+</div>
     <!-- Code cell -->
     <table>
       <tr>
