--- a/kap_2/beispiel_kern_bild.html
+++ b/kap_2/beispiel_kern_bild.html
@@ -26,6 +26,9 @@
     <p hidden="hidden">\(      \DeclareMathOperator{\abs}{abs}
       \newcommand{\ensuremath}[1]{\mbox{$#1$}}
 \)</p>
+    <!-- Text cell -->
+    <div class="comment">Matrix A
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -63,6 +66,9 @@
     <p>\[\operatorname{(A)	}\begin{pmatrix}1 &amp; 2 &amp; 3\\
 4 &amp; 5 &amp; 6\end{pmatrix}\]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Bild der Matrix A
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -85,6 +91,9 @@
 4\end{pmatrix}\operatorname{,}\begin{pmatrix}2\\
 5\end{pmatrix}\right) \]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Kern der Matrix A
+</div>
     <!-- Code cell -->
     <table>
       <tr>
