--- a/kap_2/beispiel_poincare.html
+++ b/kap_2/beispiel_poincare.html
@@ -44,6 +44,9 @@
         </td>
       </tr>
     </table>
+    <!-- Text cell -->
+    <div class="comment">Kovektorfeld bzw. Differentialform
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -87,6 +90,9 @@
     </table>
     <p>\[\operatorname{(w)	}\left[ 2 \ensuremath{\mathrm{x1}} {{\ensuremath{\mathrm{x2}}}^{3}}\operatorname{,}3 {{\ensuremath{\mathrm{x1}}}^{2}} {{\ensuremath{\mathrm{x2}}}^{2}}\right] \]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Potential (Skalarfeld)
+</div>
     <!-- Code cell -->
     <table>
       <tr>
