--- a/kap_2/beispiel_orth_kompl.html
+++ b/kap_2/beispiel_orth_kompl.html
@@ -44,6 +44,9 @@
         </td>
       </tr>
     </table>
+    <!-- Text cell -->
+    <div class="comment">Spaltenvektoren
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -96,6 +99,9 @@
         </td>
       </tr>
     </table>
+    <!-- Text cell -->
+    <div class="comment">Orthogonales Komplement
+</div>
     <!-- Code cell -->
     <table>
       <tr>
