Kapitel 4: Beispiele angefangen

--- a/kap_3/Annihilator1.html
+++ b/kap_3/Annihilator1.html
@@ -44,6 +44,9 @@
         </td>
       </tr>
     </table>
+    <!-- Text cell -->
+    <div class="comment">Vektorfelder als Spaltenvektoren
+</div>
     <!-- Code cell -->
     <table>
       <tr>
@@ -110,11 +113,14 @@
 0\\
 1\end{pmatrix}\]
 </p>
+    <!-- Text cell -->
+    <div class="comment">Orthogonales Komplement
+</div>
     <!-- Code cell -->
     <table>
       <tr>
         <td>
-          <span class="prompt">(%i5)
+          <span class="prompt">(%i4)
   </span>
         </td>
         <td>
@@ -130,7 +136,7 @@
         </td>
       </tr>
     </table>
-    <p>\[\]\[\mbox{Proviso:} \,\operatorname{notequal}\left( \sin{\left( \ensuremath{\mathrm{x3}}\right) }\operatorname{,}0\right) \ensuremath{\mathrm{ and }}\operatorname{notequal}\left( \sin{\left( \ensuremath{\mathrm{x3}}\right) }\operatorname{,}0\right) \]
+    <p>\[\]\[\mbox{Proviso:} \operatorname{notequal}\left( \sin{\left( \ensuremath{\mathrm{x3}}\right) }\operatorname{,}0\right) \ensuremath{\mathrm{ and }}\operatorname{notequal}\left( \sin{\left( \ensuremath{\mathrm{x3}}\right) }\operatorname{,}0\right) \]
 </p>
     <p>\[\operatorname{	}\operatorname{span}\left( \begin{pmatrix}-\cos{\left( \ensuremath{\mathrm{x3}}\right) }\\
 \sin{\left( \ensuremath{\mathrm{x3}}\right) }\\
