--- a/kap_3/Annihilator3.html
+++ b/kap_3/Annihilator3.html
@@ -44,6 +44,9 @@
         </td>
       </tr>
     </table>
+    <!-- Text cell -->
+    <div class="comment">Vektorfelder
+</div>
     <!-- Code cell -->
     <table>
       <tr>
