--- a/kap_4/Inverses_Pendel_mit_Rad_EZ.html
+++ b/kap_4/Inverses_Pendel_mit_Rad_EZ.html
@@ -26,6 +26,26 @@
     <p hidden="hidden">\(      \DeclareMathOperator{\abs}{abs}
       \newcommand{\ensuremath}[1]{\mbox{$#1$}}
 \)</p>
+    <!-- Code cell -->
+    <table>
+      <tr>
+        <td>
+          <span class="prompt">(%i1)	
+  </span>
+        </td>
+        <td>
+          <span class="input">
+            <span class="code_function">load</span>
+            <span class="code_operator">(</span>
+            <span class="code_string">"vect"</span>
+            <span class="code_operator">)</span>
+            <span class="code_endofline">;</span>
+          </span>
+        </td>
+      </tr>
+    </table>
+    <p>\[\operatorname{	}"/usr/share/maxima/5.43.2/share/vector/vect.mac"\]
+</p>
     <!-- Text cell -->
     <div class="comment">Lie-Klammer bzw. Lie-Ableitung eines Vektorfeldes
 </div>
@@ -33,7 +53,7 @@
     <table>
       <tr>
         <td>
-          <span class="prompt">(%i1)	
+          <span class="prompt">(%i2)	
   </span>
         </td>
         <td>
@@ -216,7 +236,7 @@
             <span class="code_variable">Dg</span>
             <span class="code_endofline">.</span>
             <span class="code_variable">f</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_variable">Df</span>
             <span class="code_endofline">.</span>
             <span class="code_variable">g</span>
@@ -236,7 +256,7 @@
             <span class="code_variable">x</span>
             <span class="code_endofline">,</span>
             <span class="code_variable">k</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_number">1</span>
             <span class="code_operator">)</span>
             <span class="code_operator">)</span>
@@ -256,7 +276,7 @@
     <table>
       <tr>
         <td>
-          <span class="prompt">(%i2)	
+          <span class="prompt">(%i3)	
   </span>
         </td>
         <td>
@@ -338,7 +358,7 @@
             <span class="code_operator">(</span>
             <span class="code_function">LieBracket</span>
             <span class="code_operator">(</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_variable">f</span>
             <span class="code_endofline">,</span>
             <span class="code_variable">g</span>
@@ -353,7 +373,7 @@
             <span class="code_number">0</span>
             <span class="code_endofline">,</span>
             <span class="code_variable">n</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_number">1</span>
             <span class="code_operator">)</span>
             <span class="code_endofline">,</span>
@@ -385,7 +405,7 @@
     <table>
       <tr>
         <td>
-          <span class="prompt">(%i5)	
+          <span class="prompt">(%i6)	
   </span>
         </td>
         <td>
@@ -397,7 +417,7 @@
             <span class="code_endofline">,</span>
             <span class="code_operator">(</span>
             <span class="code_variable">m0</span>
-            <span class="code_operator">·</span>
+            <span class="code_operator">*</span>
             <span class="code_function">sin</span>
             <span class="code_operator">(</span>
             <span class="code_variable">x1</span>
@@ -406,14 +426,14 @@
             <span class="code_operator">/</span>
             <span class="code_operator">(</span>
             <span class="code_variable">J1</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_variable">I2</span>
             <span class="code_operator">)</span>
             <span class="code_endofline">,</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_operator">(</span>
             <span class="code_variable">m0</span>
-            <span class="code_operator">·</span>
+            <span class="code_operator">*</span>
             <span class="code_function">sin</span>
             <span class="code_operator">(</span>
             <span class="code_variable">x1</span>
@@ -422,7 +442,7 @@
             <span class="code_operator">/</span>
             <span class="code_operator">(</span>
             <span class="code_variable">J1</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_variable">I2</span>
             <span class="code_operator">)</span>
             <span class="code_operator">]</span>
@@ -435,12 +455,12 @@
             <span class="code_operator">[</span>
             <span class="code_number">0</span>
             <span class="code_endofline">,</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_number">1</span>
             <span class="code_operator">/</span>
             <span class="code_operator">(</span>
             <span class="code_variable">J1</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_variable">I2</span>
             <span class="code_operator">)</span>
             <span class="code_endofline">,</span>
@@ -448,10 +468,10 @@
             <span class="code_operator">/</span>
             <span class="code_operator">(</span>
             <span class="code_variable">I2</span>
-            <span class="code_operator">·</span>
+            <span class="code_operator">*</span>
             <span class="code_operator">(</span>
             <span class="code_variable">J1</span>
-            <span class="code_operator">−</span>
+            <span class="code_operator">-</span>
             <span class="code_variable">I2</span>
             <span class="code_operator">)</span>
             <span class="code_operator">)</span>
@@ -487,7 +507,7 @@
     <table>
       <tr>
         <td>
-          <span class="prompt">(%i6)	
+          <span class="prompt">(%i7)	
   </span>
         </td>
         <td>
@@ -518,7 +538,7 @@
     <table>
       <tr>
         <td>
-          <span class="prompt">(%i8)	
+          <span class="prompt">(%i9)	
   </span>
         </td>
         <td>
@@ -543,6 +563,8 @@
             <span class="code_endofline">
               <br/>
             </span>
+            <span class="code_variable">Ω</span>
+            <span class="code_operator">:</span>
             <span class="code_function">factor</span>
             <span class="code_operator">(</span>
             <span class="code_variable">%</span>
@@ -552,9 +574,70 @@
         </td>
       </tr>
     </table>
-    <p>\[\operatorname{	}\operatorname{span}\left( \begin{pmatrix}0\\
+    <p>\[\operatorname{(\Omega )	}\operatorname{span}\left( \begin{pmatrix}0\\
 \ensuremath{\mathrm{J1}}\, \left( \ensuremath{\mathrm{J1}}-\ensuremath{\mathrm{I2}}\right) \\
 \ensuremath{\mathrm{I2}}\, \left( \ensuremath{\mathrm{J1}}-\ensuremath{\mathrm{I2}}\right) \end{pmatrix}\right) \]
+</p>
+    <!-- Text cell -->
+    <div class="comment">Differentialfrom/Kovektorfeld
+</div>
+    <!-- Code cell -->
+    <table>
+      <tr>
+        <td>
+          <span class="prompt">(%i12)	
+  </span>
+        </td>
+        <td>
+          <span class="input">
+            <span class="code_variable">ω</span>
+            <span class="code_operator">:</span>
+            <span class="code_function">list_matrix_entries</span>
+            <span class="code_operator">(</span>
+            <span class="code_function">first</span>
+            <span class="code_operator">(</span>
+            <span class="code_function">args</span>
+            <span class="code_operator">(</span>
+            <span class="code_variable">Ω</span>
+            <span class="code_operator">)</span>
+            <span class="code_operator">)</span>
+            <span class="code_operator">)</span>
+            <span class="code_endofline">;</span>
+          </span>
+        </td>
+      </tr>
+    </table>
+    <p>\[\operatorname{(\omega )	}\left[ 0\operatorname{,}\ensuremath{\mathrm{J1}}\, \left( \ensuremath{\mathrm{J1}}-\ensuremath{\mathrm{I2}}\right) \operatorname{,}\ensuremath{\mathrm{I2}}\, \left( \ensuremath{\mathrm{J1}}-\ensuremath{\mathrm{I2}}\right) \right] \]
+</p>
+    <!-- Text cell -->
+    <div class="comment">Potential/Ausgangsabbildung
+</div>
+    <!-- Code cell -->
+    <table>
+      <tr>
+        <td>
+          <span class="prompt">(%i14)	
+  </span>
+        </td>
+        <td>
+          <span class="input">
+            <span class="code_variable">h</span>
+            <span class="code_operator">:</span>
+            <span class="code_function">factor</span>
+            <span class="code_operator">(</span>
+            <span class="code_function">potential</span>
+            <span class="code_operator">(</span>
+            <span class="code_variable">ω</span>
+            <span class="code_endofline">,</span>
+            <span class="code_variable">x</span>
+            <span class="code_operator">)</span>
+            <span class="code_operator">)</span>
+            <span class="code_endofline">;</span>
+          </span>
+        </td>
+      </tr>
+    </table>
+    <p>\[\operatorname{(h)	}\left( \ensuremath{\mathrm{J1}}-\ensuremath{\mathrm{I2}}\right) \, \left( \ensuremath{\mathrm{I2}}\, \ensuremath{\mathrm{x3}}+\ensuremath{\mathrm{J1}}\, \ensuremath{\mathrm{x2}}\right) \]
 </p>
     <hr/>
     <p>
