Beispiel 4.43 (Wagen-Pendel-System) ergänzt

--- a/kap_4/Wagen_mit_Pendel_EZ.html
+++ b/kap_4/Wagen_mit_Pendel_EZ.html
@@ -585,8 +585,7 @@
         </td>
       </tr>
     </table>
-    <p>\[\operatorname{	}\mbox{%default
-false}\]
+    <p>\[\operatorname{false}\]
 </p>
     <hr/>
     <p>
